--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -1,317 +1,377 @@
 /* Default Modal */
-.modal-header
-{
-    background-color: #fb8521;
-    color:white;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-}
-.modal-left
-{
-  width: 400px;
-  height: 300px;
-  float: left;
-  display: block;
-  margin-left: -60%;
-}
-.text-center
-{
-    text-align: center;
-}
-.modal-body
-{
-    overflow: auto;
-}
+    .modal-header
+    {
+        background-color: #fb8521;
+        color:white;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+    }
+    .modal-left
+    {
+      width: 400px;
+      height: 300px;
+      float: left;
+      display: block;
+      margin-left: -60%;
+    }
+    .text-center
+    {
+        text-align: center;
+    }
+    .modal-body
+    {
+        overflow: auto;
+    }
 /* This is for the Pick Profile Modal */
-.pickbox
-{
-    width: 85%;
-    text-align: center;
-    height: 270px;
-    text-align: center;
-    padding-top: 20px;
-    margin: 0 auto;
-}
-.pickcircle
-{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    display: inline-block;
-    margin-left: 10px;
-    background-color: #f5f5f5;
-}
-.pickiconselected
-{
-    border:4px solid black;
-}
-.pickcolorselected
-{
-    border:4px solid black;
-}
-.pickcolorcircle:hover
-{
-    border:4px solid black;
-}
-.pickiconcircle:hover
-{
-    border:4px solid black;
-}
-.pickboxmain
-{
+    #Pickprofilepic
+    {
+        float: right;
+    }
+    .pickbox
+    {
+        width: 85%;
+        text-align: center;
+        height: 270px;
+        text-align: center;
+        padding-top: 20px;
+        margin: 0 auto;
+    }
+    .pickcircle
+    {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        display: inline-block;
+        margin-left: 10px;
+        background-color: #f5f5f5;
+    }
+    .pickiconselected
+    {
+        border:4px solid black;
+    }
+    .pickcolorselected
+    {
+        border:4px solid black;
+    }
+    .pickcolorcircle:hover
+    {
+        border:4px solid black;
+    }
+    .pickiconcircle:hover
+    {
+        border:4px solid black;
+    }
+    .pickboxmain
+    {
 
-}
-.pickprofilepic
-{
+    }
+    .pickprofilepic
+    {
 
-}
-.pick-header
-{
-    background-color: #3949AB;
-}
-.pick-title
-{
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-size: x-large;
-    font-weight: 100;
-}
-.icontext
-{
-    font-family: 'Roboto', sans-serif;
-    font-size: medium;
-    font-weight: 300;
-    margin-top: -10px;
-    float: left;
-    border-bottom: 1px solid #9E9E9E;
-}
-.save-pic-btn
-{
-    background-color: #3949AB;
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-size: large;
-    font-weight: 200;
-}
-.save-pic-btn:hover
-{
-    background-color: #3949AB;
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-size: large;
-    font-weight: 200;
-}
-
-
-
-
-
-
-
+    }
+    .pick-header
+    {
+        background-color: #3949AB;
+    }
+    .pick-title
+    {
+        color: white;
+        font-family: 'Roboto', sans-serif;
+        font-size: x-large;
+        font-weight: 100;
+    }
+    .icontext
+    {
+        font-family: 'Roboto', sans-serif;
+        font-size: medium;
+        font-weight: 300;
+        margin-top: -10px;
+        float: left;
+        border-bottom: 1px solid #9E9E9E;
+    }
+    .save-pic-btn
+    {
+        background-color: #3949AB;
+        color: white;
+        font-family: 'Roboto', sans-serif;
+        font-size: large;
+        font-weight: 200;
+    }
+    .save-pic-btn:hover
+    {
+        background-color: #3949AB;
+        color: white;
+        font-family: 'Roboto', sans-serif;
+        font-size: large;
+        font-weight: 200;
+    }
 /* Colors and Icons for profile */
-#pickcolor_red
-{
-    background-color: #F44336;
-}
-#pickcolor_pink
-{
-    background-color: #E91E63;
-}
-#pickcolor_purple
-{
-    background-color: #9C27B0;
-}
-#pickcolor_indigo
-{
-    background-color: #3F51B5;
-}
-#pickcolor_blue
-{
-    background-color: #2196F3;
-}
-#pickcolor_cyan
-{
-    background-color: #00BCD4;
-}
-#pickcolor_lightgreen
-{
-    background-color: #8BC34A;
-}
-#pickcolor_teal
-{
-    background-color: #009688;
-}
-#pickcolor_yellow
-{
-    background-color: #FFEB3B;
-}
-#pickcolor_orange
-{
-    background-color: #FF9800;
-}
+    #pickcolor_red
+    {
+        background-color: #F44336;
+    }
+    #pickcolor_pink
+    {
+        background-color: #E91E63;
+    }
+    #pickcolor_purple
+    {
+        background-color: #9C27B0;
+    }
+    #pickcolor_indigo
+    {
+        background-color: #3F51B5;
+    }
+    #pickcolor_blue
+    {
+        background-color: #2196F3;
+    }
+    #pickcolor_cyan
+    {
+        background-color: #00BCD4;
+    }
+    #pickcolor_lightgreen
+    {
+        background-color: #8BC34A;
+    }
+    #pickcolor_teal
+    {
+        background-color: #009688;
+    }
+    #pickcolor_yellow
+    {
+        background-color: #FFEB3B;
+    }
+    #pickcolor_orange
+    {
+        background-color: #FF9800;
+    }
 
-#pickicon_controller
-{
-    background-image: url(/assets/controller.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-#pickicon_mic
-{
-    background-image: url(/assets/mic.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-#pickicon_heart
-{
-    background-image: url(/assets/heart.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-#pickicon_star
-{
-    background-image: url(/assets/star.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-#pickicon_lightbulb
-{
-    background-image: url(/assets/lightbulb.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-#pickicon_face
-{
-    background-image: url(/assets/face.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-#pickicon_cupcake
-{
-    background-image: url(/assets/cupcake.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-#pickicon_zen
-{
-    background-image: url(/assets/zen.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-#pickicon_football
-{
-    background-image: url(/assets/football.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-#pickicon_paw
-{
-    background-image: url(/assets/paw.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
+    #pickicon_controller
+    {
+        background-image: url(/assets/controller.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    #pickicon_mic
+    {
+        background-image: url(/assets/mic.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    #pickicon_heart
+    {
+        background-image: url(/assets/heart.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    #pickicon_star
+    {
+        background-image: url(/assets/star.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    #pickicon_lightbulb
+    {
+        background-image: url(/assets/lightbulb.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    #pickicon_face
+    {
+        background-image: url(/assets/face.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    #pickicon_cupcake
+    {
+        background-image: url(/assets/cupcake.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    #pickicon_zen
+    {
+        background-image: url(/assets/zen.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    #pickicon_football
+    {
+        background-image: url(/assets/football.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    #pickicon_paw
+    {
+        background-image: url(/assets/paw.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
 
-.pickcolor_red
-{
-    background-color: #F44336;
-}
-.pickcolor_pink
-{
-    background-color: #E91E63;
-}
-.pickcolor_purple
-{
-    background-color: #9C27B0;
-}
-.pickcolor_indigo
-{
-    background-color: #3F51B5;
-}
-.pickcolor_blue
-{
-    background-color: #2196F3;
-}
-.pickcolor_cyan
-{
-    background-color: #00BCD4;
-}
-.pickcolor_lightgreen
-{
-    background-color: #8BC34A;
-}
-.pickcolor_teal
-{
-    background-color: #009688;
-}
-.pickcolor_yellow
-{
-    background-color: #FFEB3B;
-}
-.pickcolor_orange
-{
-    background-color: #FF9800;
-}
+    .pickcolor_red
+    {
+        background-color: #F44336;
+    }
+    .pickcolor_pink
+    {
+        background-color: #E91E63;
+    }
+    .pickcolor_purple
+    {
+        background-color: #9C27B0;
+    }
+    .pickcolor_indigo
+    {
+        background-color: #3F51B5;
+    }
+    .pickcolor_blue
+    {
+        background-color: #2196F3;
+    }
+    .pickcolor_cyan
+    {
+        background-color: #00BCD4;
+    }
+    .pickcolor_lightgreen
+    {
+        background-color: #8BC34A;
+    }
+    .pickcolor_teal
+    {
+        background-color: #009688;
+    }
+    .pickcolor_yellow
+    {
+        background-color: #FFEB3B;
+    }
+    .pickcolor_orange
+    {
+        background-color: #FF9800;
+    }
 
-.pickicon_controller
-{
-    background-image: url(/assets/controller.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-.pickicon_mic
-{
-    background-image: url(/assets/mic.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-.pickicon_heart
-{
-    background-image: url(/assets/heart.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-.pickicon_star
-{
-    background-image: url(/assets/star.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-.pickicon_lightbulb
-{
-    background-image: url(/assets/lightbulb.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-.pickicon_face
-{
-    background-image: url(/assets/face.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-.pickicon_cupcake
-{
-    background-image: url(/assets/cupcake.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-.pickicon_zen
-{
-    background-image: url(/assets/zen.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-.pickicon_football
-{
-    background-image: url(/assets/football.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
-.pickicon_paw
-{
-    background-image: url(/assets/paw.png);
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-}
+    .pickicon_controller
+    {
+        background-image: url(/assets/controller.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    .pickicon_mic
+    {
+        background-image: url(/assets/mic.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    .pickicon_heart
+    {
+        background-image: url(/assets/heart.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    .pickicon_star
+    {
+        background-image: url(/assets/star.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    .pickicon_lightbulb
+    {
+        background-image: url(/assets/lightbulb.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    .pickicon_face
+    {
+        background-image: url(/assets/face.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    .pickicon_cupcake
+    {
+        background-image: url(/assets/cupcake.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    .pickicon_zen
+    {
+        background-image: url(/assets/zen.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    .pickicon_football
+    {
+        background-image: url(/assets/football.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+    .pickicon_paw
+    {
+        background-image: url(/assets/paw.png);
+        background-position:50% 50%;
+        background-repeat:no-repeat;
+    }
+/* Header */
+    .header
+    {
+        position:absolute;
+        top:0px;
+        width:103%;
+        background-color: #0277BD;
+        height: 60px;
+        padding-left: 10px;
+        margin-left: -10px;
+    }
+    .header-left
+    {
+        width: 33%;
+        float:left;
+        height:60px;
+        line-height: 60px;
+        vertical-align: middle;
+        text-align: left;
+    }
+    .header-left-text
+    {
+        float: left;
+        padding-left: 10px;
+        font-weight: 300;
+        font-size: 24px;
+    }
+    .header-center
+    {
+        width: 33%;
+        float:left;
+        height: 60px;
+        text-align: center;
+    }
+    .header-right
+    {
+        width: 33%;
+        float:left;
+        height: 60px;
+        text-align: center;
+    }
+    .header-profile
+    {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        display: inline-block;
+        float: left;
+        margin-top: 10px;
+        margin-left: 10px;
+        background-color: #f5f5f5;
+    }
+    .header-caret
+    {
+        display: inline-block;
+        width: 0;
+        height: 0;
+        margin-left: 2px;
+        vertical-align: middle;
+        border-top: 6px dashed;
+        border-right: 6px solid transparent;
+        border-left: 6px solid transparent
+    }
 
 
 .center{
@@ -429,7 +489,7 @@
 {
     font-family: 'Comfortaa', cursive;
     font-size: 35px;
-    color: #fb8521 !important;
+    color: white !important;
 }
 .nav-link{
 
@@ -542,7 +602,7 @@ body
 {
     height: 100%;
     font-family: 'Roboto', sans-serif;
-    padding-top: 70px;
+    padding-top: 80px;
     background-color:whitesmoke;
 }
 .h4 , h4
