--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,8 +1,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script>
-  var socket = io.connect('http://helpingchatbackend.herokuapp.com');
-  //var socket = io.connect('http://localhost:8080');
+  //var socket = io.connect('http://helpingchatbackend.herokuapp.com');
+  var socket = io.connect('http://localhost:8080');
 
   // on connection to server, ask for user's name with an anonymous callback
   socket.on('connect', function(){
@@ -24,21 +24,21 @@
   }
 </script>
 
-<!-- Nav bar -->
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class = "navbar-header">
-      <p class = "navbar-brand brand"> Helping Chat </p>
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainnav" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+<div class="header">
+  <div class="header-left">
+    <div class="header-profile pickcolor_red pickicon_controller">
     </div>
-
- </div>
-</nav>
+    <div class="header-left-text">Their Name</div> <span class="header-caret"></span>
+  </div>
+  <div class="header-center">
+    <div class="brand">
+      Helping Chat
+    </div>
+  </div>
+  <div class="header-right">
+    Right
+  </div>
+</div>
 <!-- Main_Page -->
 <!-- Desktop side -->
 <!-- /#sidebar-wrapper -->
